data/derived/fa15/progs/unify/prog2688.ml.out
Characters 78-80:
  | Sine e' -> sin (pi * eval (e',x,y))
                    ^^
Error: This expression has type float but an expression was expected of type
         int
